--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
