--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
