--- a/railway.yml
+++ b/railway.yml
@@ -1,4 +1,31 @@
-plugins:
-  - type: postgres
-  - type: static
-    path: ./src/public
+version: '1.0'
+name: my-app
+build:
+  steps:
+    # Instala dependencias
+    - name: Install dependencies
+      env:
+        # Configura el cache de yarn
+        YARN_CACHE_FOLDER: /app/cache/yarn
+      run: yarn install --frozen-lockfile
+    # Construye la aplicación
+    - name: Build application
+      run: |
+        yarn build
+        # Copia los archivos estáticos en la carpeta de salida
+        cp -r ./src/public/* ./dist/
+  # Copia los archivos construidos en una carpeta temporal para la siguiente fase
+  output:
+    - name: dist
+      path: ./dist
+serve:
+  steps:
+    # Instala http-server
+    - name: Install http-server
+      run: yarn global add http-server
+    # Sirve la carpeta dist
+    - name: Start server
+      run: http-server ./dist -p $PORT
+      env:
+        # Configura el puerto de http-server
+        PORT: 8080
