--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "npx http-server ./dist -p $PORT"
-
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
+    "http-server": "^14.1.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
