--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "http-server": "^14.1.1",
     "react": "^18.0.0",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
