--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "serve": "vite build && vite preview --port 3000 --host 0.0.0.0",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "npx http-server ./dist -p $PORT"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
@@ -19,12 +21,14 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-switch": "^7.0.0",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
