--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-switch": "^7.0.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "react-spring": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
