--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "@types/react-spring": "^9.3.0"
   }
 }
